test/tests/bad/extern-not-monomorphic.carth
;; ExternNotMonomorphic

(extern foo (Fun [a] Int))
